update list